# opencarrier

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  SECURITY.md  build-release.sh  docker-compose.yml  flake.nix  head  install.sh  justfile  opencarrier.toml.example  test.sh
.cargo/: audit.toml
crates/opencarrier-api/: Cargo.toml
crates/opencarrier-api/src/: channel_bridge.rs  command_security.rs  lib.rs  middleware.rs  openai_compat.rs  rate_limiter.rs  routes.rs  server.rs  session_auth.rs  types.rs  webchat.rs  ws.rs
crates/opencarrier-api/src/routes/: agents.rs  auth.rs  bindings.rs  bots.rs  brain.rs  clones.rs  common.rs  comms.rs  config.rs  cron.rs  files.rs  hub.rs  invites.rs  kv.rs  messaging.rs  observability.rs  onboard.rs  plugin_toml.rs  plugins.rs  providers.rs  sessions.rs  state.rs  templates.rs  tenants.rs  tools_skills.rs  webhooks.rs  weixin.rs
crates/opencarrier-api/static/: birth.html  cert-preview.html  index_body.html  index_head.html  manifest.json  share.html  share.html.bak  sw.js
crates/opencarrier-api/static/css/: bots.css  components.css  layout.css  theme.css
crates/opencarrier-api/static/js/: api.js  app.js
crates/opencarrier-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/opencarrier-channels/: Cargo.toml
crates/opencarrier-channels/src/: bluesky.rs  bridge.rs  dingtalk.rs  discourse.rs  flock.rs  formatter.rs  google_chat.rs  gotify.rs  irc.rs  mastodon.rs  matrix.rs  mattermost.rs  messenger.rs  mumble.rs  nextcloud.rs  pumble.rs  reddit.rs  revolt.rs  rocketchat.rs  router.rs  teams.rs  viber.rs  webhook.rs  wecom.rs  xmpp.rs
crates/opencarrier-channels/tests/: bridge_integration_test.rs
crates/opencarrier-cli/: Cargo.toml
crates/opencarrier-cli/src/: acp.rs  bundled_agents.rs  dotenv.rs  launcher.rs  main.rs  mcp.rs  serve.rs  setup.rs  templates.rs  ui.rs
crates/opencarrier-cli/tests/: serve_mode_test.rs
crates/opencarrier-clone/: Cargo.toml
crates/opencarrier-clone/src/: converter.rs  hub.rs  lib.rs  loader.rs
crates/opencarrier-extensions/: Cargo.toml
crates/opencarrier-extensions/integrations/: github.toml  gmail.toml  google-calendar.toml  google-drive.toml  sqlite-mcp.toml  teams-mcp.toml
crates/opencarrier-extensions/src/: bundled.rs  credentials.rs  installer.rs  lib.rs  oauth.rs  registry.rs  vault.rs
crates/opencarrier-hands/: Cargo.toml
crates/opencarrier-hands/src/: bundled.rs  lib.rs  registry.rs
crates/opencarrier-kernel/: Cargo.toml
crates/opencarrier-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  brain.rs  capabilities.rs  config.rs  config_reload.rs  cron.rs  dotenv.rs  error.rs  event_bus.rs  heartbeat.rs  kernel.rs  lib.rs  mcp_docker.rs  mcp_registry.rs  metering.rs  pairing.rs  registry.rs  scheduler.rs  supervisor.rs  triggers.rs  whatsapp_gateway.rs  wizard.rs  workflow.rs
crates/opencarrier-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/opencarrier-lifecycle/: Cargo.toml
crates/opencarrier-lifecycle/src/: bloat.rs  compile.rs  evaluate.rs  evolution.rs  evolution_config.rs  feedback.rs  health.rs  lib.rs  parsers.rs  version.rs  watcher.rs
crates/opencarrier-memory/: Cargo.toml
crates/opencarrier-memory/src/: acp_session.rs  consolidation.rs  invites.rs  knowledge.rs  lib.rs  migration.rs  semantic.rs  session.rs  structured.rs  substrate.rs  tenant.rs  usage.rs  yinghe_session.rs
crates/opencarrier-plugin-sdk/: Cargo.toml
crates/opencarrier-plugin-sdk/src/: channel.rs  context.rs  error.rs  lib.rs  macros.rs  plugin.rs  tool.rs  types.rs
crates/opencarrier-runtime/: Cargo.toml
crates/opencarrier-runtime/src/: a2a.rs  agent_loop.rs  apply_patch.rs  auth_cooldown.rs  browser.rs  cloud_client.rs  compactor.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  graceful_shutdown.rs  hooks.rs  host_functions.rs  image_gen.rs  kernel_handle.rs  lib.rs  link_understanding.rs  llm_driver.rs  llm_errors.rs  loop_guard.rs  mcp.rs  mcp_server.rs  media_understanding.rs  model_catalog.rs  prompt_builder.rs  python_runtime.rs  retry.rs  routing.rs  sandbox.rs  session_repair.rs  str_utils.rs  subprocess_sandbox.rs  tool_policy.rs  tool_runner.rs  tts.rs  web_fetch.rs  web_search.rs  workspace_context.rs  workspace_sandbox.rs
crates/opencarrier-skills/: Cargo.toml
crates/opencarrier-skills/src/: bundled.rs  clawhub.rs  lib.rs  loader.rs  marketplace.rs  openclaw_compat.rs  registry.rs
crates/ying-relay/: Cargo.toml
crates/ying-relay/src/: auth.rs  client.rs  crypto.rs  lib.rs  protocol.rs
plugins/opencarrier-plugin-bilibili/: Cargo.toml  plugin.toml
plugins/opencarrier-plugin-bilibili/src/: api.rs  lib.rs  schema.rs  tools.rs
plugins/opencarrier-plugin-feishu/: Cargo.toml  plugin.toml
plugins/opencarrier-plugin-feishu/src/: api.rs  api_ext.rs  channel.rs  lib.rs  token.rs  types.rs  ws.rs
plugins/opencarrier-plugin-twitter/: Cargo.toml  plugin.toml
plugins/opencarrier-plugin-twitter/src/: api.rs  lib.rs  schema.rs  tools.rs
plugins/opencarrier-plugin-wecom/: Cargo.toml  plugin.toml
plugins/opencarrier-plugin-wecom/src/: channel.rs  crypto.rs  lib.rs  smartbot.rs  token.rs  tools.rs
plugins/opencarrier-plugin-weixin/: Cargo.toml  plugin.toml
plugins/opencarrier-plugin-weixin/src/: api.rs  channel.rs  lib.rs  token.rs  types.rs
plugins/opencarrier-plugin-zhihu/: Cargo.toml  plugin.toml
plugins/opencarrier-plugin-zhihu/src/: api.rs  lib.rs  schema.rs  tools.rs
tools/bilibili-mcp/: Cargo.toml
tools/bilibili-mcp/src/: api.rs  main.rs
tools/twitter-mcp/: Cargo.toml
tools/twitter-mcp/src/: api.rs  main.rs
tools/wechat-oa-mcp/: Cargo.toml
tools/wechat-oa-mcp/src/: main.rs  wechat.rs
tools/xiaohongshu-mcp/: Cargo.toml
tools/xiaohongshu-mcp/src/: api.rs  main.rs
tools/zhihu-mcp/: Cargo.toml
tools/zhihu-mcp/src/: api.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+327 files in other folders)
