[package]
name = "opencarrier-clone"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencarrier-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
flate2 = "1"
tar = "0.4"
reqwest = { workspace = true }
urlencoding = "2"
getrandom = "0.3"
