[package]
name = "opencarrier-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the OpenCarrier Agent OS"

[dependencies]
opencarrier-types = { path = "../opencarrier-types" }
opencarrier-memory = { path = "../opencarrier-memory" }
opencarrier-runtime = { path = "../opencarrier-runtime" }
opencarrier-skills = { path = "../opencarrier-skills" }
opencarrier-channels = { path = "../opencarrier-channels" }
# Stub crates (to be removed)
opencarrier-hands = { path = "../opencarrier-hands" }
opencarrier-extensions = { path = "../opencarrier-extensions" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"
zeroize = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
