[package]
name = "opencarrier-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencarrier-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
