[package]
name = "opencarrier-plugin-sdk"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "SDK for writing OpenCarrier plugins in Rust"
repository = "https://github.com/yinnho/opencarrier"
documentation = "https://docs.rs/opencarrier-plugin-sdk"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
