[package]
name = "ying-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# WebSocket/URL
url = { workspace = true }

# Base64
base64 = { workspace = true }

# Logging
tracing = { workspace = true }

# Ed25519
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
sha2 = { workspace = true }

# Futures
futures-util = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
