[package]
name = "opencarrier-plugin-feishu"
version = "0.1.0"
edition = "2021"
description = "Feishu/Lark Bot channel plugin for OpenCarrier"

[lib]
crate-type = ["cdylib"]

[dependencies]
opencarrier-plugin-sdk = { path = "../../crates/opencarrier-plugin-sdk" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tracing = "0.1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

[workspace]
