[package]
name = "opencarrier-plugin-twitter"
version = "0.1.0"
edition = "2021"
description = "Twitter/X platform tools plugin for OpenCarrier"

[lib]
crate-type = ["cdylib"]

[dependencies]
opencarrier-plugin-sdk = { path = "../../crates/opencarrier-plugin-sdk" }
opencarrier-types = { path = "../../crates/opencarrier-types" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tracing = "0.1"
