[package]
name = "opencarrier-plugin-wecom"
version = "1.0.0"
edition = "2021"
description = "WeChat Work (WeCom) channel and tools plugin for OpenCarrier"

[lib]
crate-type = ["cdylib"]

[dependencies]
opencarrier-plugin-sdk = { path = "../../crates/opencarrier-plugin-sdk" }
opencarrier-types = { path = "../../crates/opencarrier-types" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
aes = "0.8"
cbc = "0.1"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"
roxmltree = "0.20"
tracing = "0.1"
axum = "0.8"
