[package]
name = "opencarrier-plugin-weixin"
version = "0.1.0"
edition = "2021"
description = "WeChat personal account (iLink) channel plugin for OpenCarrier"

[lib]
crate-type = ["cdylib"]

[dependencies]
opencarrier-plugin-sdk = { path = "../../crates/opencarrier-plugin-sdk" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
tracing = "0.1"

[workspace]
