[package]
name = "opencarrier-plugin-zhihu"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
opencarrier-plugin-sdk = { path = "../../crates/opencarrier-plugin-sdk" }
opencarrier-types = { path = "../../crates/opencarrier-types" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
regex-lite = { workspace = true }
