[package]
name = "bilibili-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bilibili MCP Server — search, video, user, feed, comments via MCP protocol"

[dependencies]
mcp-common = { path = "../mcp-common" }
rmcp = { version = "1.5", features = ["server", "transport-io"] }
schemars = "1"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
md-5 = "0.10"
