[package]
name = "wechat-oa-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WeChat Official Account MCP Server — publish & manage articles via MCP protocol"

[dependencies]
rmcp = { version = "1.5", features = ["server", "transport-io"] }
schemars = "1"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
