[package]
name = "xiaohongshu-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Xiaohongshu MCP Server — creator notes, profile, stats via MCP protocol"

[dependencies]
mcp-common = { path = "../mcp-common" }
rmcp = { version = "1.5", features = ["server", "transport-io"] }
schemars = "1"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
