[package]
name = "zhihu-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zhihu MCP Server — hot, question, search via MCP protocol"

[dependencies]
mcp-common = { path = "../mcp-common" }
rmcp = { version = "1.5", features = ["server", "transport-io"] }
schemars = "1"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex-lite = { workspace = true }
